<resources>
    <string name="app_name">PincodeTest</string>
    <string name="setup_pincode">Setup Pincode</string>
    <string name="auth_pincode">Authentication with Pincode</string>

    <string name="cancel">Отмена</string>
    <string name="enter_pin">Введите PIN код</string>
    <string name="enter_old_pin">Введите старый PIN код</string>
    <string name="enter_new_pin">Введите новый PIN код</string>

    <string name="enter_pin_or_use_touch_id">Введите PIN или войдите с помощью Touch ID</string>
    <string name="use_pin">Использовать PIN для входа в приложение?</string>
    <string name="no_thanks">Нет, спасибо</string>
    <string name="confirm_pin">Подтвердите введенный PIN код</string>
    <string name="confirm_error">Пароли должны совпадать</string>
    <string name="pin_error">Неправильный PIN</string>
    <string name="pin_0">0</string>
    <string name="pin_1">1</string>
    <string name="pin_2">2</string>
    <string name="pin_3">3</string>
    <string name="pin_4">4</string>
    <string name="pin_5">5</string>
    <string name="pin_6">6</string>
    <string name="pin_7">7</string>
    <string name="pin_8">8</string>
    <string name="pin_9">9</string>

</resources>
