<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/large_spacing">

    <TextView
        android:id="@+id/lockScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/logo_vertical_space"
        android:layout_marginRight="@dimen/logo_vertical_space"
        android:layout_marginBottom="@dimen/logo_vertical_space"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/input_title_text_size" />

    <com.noisyz.pincodetest.modules.common.custom.PincodeInputIndicatorView
        android:id="@+id/pincode_input_indicator"
        android:layout_width="@dimen/input_container_width"
        android:layout_height="@dimen/input_field_size"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_button_container_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_button_horizontal_padding"
                android:layout_marginEnd="@dimen/input_button_horizontal_padding"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_button_horizontal_padding"
                android:layout_marginEnd="@dimen/input_button_horizontal_padding"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_6"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_7"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_button_horizontal_padding"
                android:layout_marginEnd="@dimen/input_button_horizontal_padding"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_8"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <TextView
                android:id="@+id/pin_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_9"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fingerprint"
                android:layout_width="0dp"
                android:layout_height="@dimen/fingerprint_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_fingerprint"
                android:text="@string/pin_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/pin_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_button_horizontal_padding"
                android:layout_marginEnd="@dimen/input_button_horizontal_padding"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/input_button_padding"
                android:text="@string/pin_0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />

            <ImageView
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="@dimen/fingerprint_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerInside"
                android:src="@drawable/backspace"
                android:text="@string/pin_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/input_button_text_size" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/pin_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/default_spacing"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/input_message_text_size" />

</LinearLayout>